feat(digit): edit pom

--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.alibaba.csp.sentinel-core</groupId>
+    <groupId>com.lyw.sentinel-core</groupId>
     <artifactId>sentinel-digit</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>sentinel-digit</name>
     <description>Demo project for Spring Boot</description>
 
